--- a/index.html
+++ b/index.html
@@ -4,80 +4,7 @@
 		<title>drawing</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<style type="text/css">
-			*{
-				background-color: pink;
-			}
-			.heart{
-				background-color: #DB095B;
-				position: absolute;
-				top: 300px;
-				left: 200px;
-				width: 200px;
-				height: 200px;
-				transform: rotate(-45deg);
-				animation-name: heart;
-				animation-duration: 20s;
-				animation-iteration-count: 10;
-
-			}
-			.heart::after{
-				background-color: #DB095B;
-				content: "";
-				position: absolute;
-				top: 0px;
-				left: 100px;
-				width: 200px;
-				height: 200px;
-				border-radius: 50%;		
-				animation-name: heart;
-				animation-duration: 20s	
-			}
-			.heart::before{
-				background-color: #DB095B;
-				content: "";
-				position: absolute;
-				top: -100px;
-				left: 0px;
-				width: 200px;
-				height: 200px;
-				border-radius: 50%;		
-				animation-name: heart;
-				animation-duration: 20s	
-			}
-			@keyframes heart{
-				0%{
-					background-color: red;
-				}
-				10%{
-					background-color: orange;
-				}
-				20%{
-					background-color: yellow;
-				}
-				30%{
-					background-color: green;
-				}
-				40%{
-					background-color: blue;
-				}
-				50%{
-					background-color: indigo;
-				}
-				60%{
-					background-color: violet;
-				}
-				80%{
-					background-color: purple;
-				}
-				90%{
-					background-color: magenta;
-				}
-				100%{
-					background-color: crimson;
-				}
-			}
-		</style>
+		<link rel="stylesheet" href="animation.css">
 	</head>
 	<body>
 		<div class="heart"></div>
